# 7559Tp1

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/models/: Camera.cpp  Camera.h  Image.cpp  Image.h  Observatory.cpp  Observatory.h  ObservatorySimulator.cpp  ObservatorySimulator.h  Photo.cpp  Photo.h  types.h
src/utils/: ErrorHandler.cpp  ErrorHandler.h  Logger.cpp  Logger.h
src/utils/IPC/: SharedMemory.h
src/utils/IPC/fifos/: Fifo.cpp  Fifo.h  FifoRead.cpp  FifoRead.h  FifoWrite.cpp  FifoWrite.h
src/utils/IPC/signals/: EventHandler.h  SIGINT_Handler.h  SignalHandler.cpp  SignalHandler.h
